<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroFormulario">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="285dp"
        android:layout_height="301dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/logo_pt_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/lblElabora"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:background="#BEE9E8"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:freezesText="false"
        android:gravity="center"
        android:linksClickable="false"
        android:text="@string/elabora"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="30dp"
        android:background="#BEE9E8"
        android:cursorVisible="false"
        android:ellipsize="none"
        android:freezesText="false"
        android:gravity="center"
        android:linksClickable="false"
        android:text="@string/fecha"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblElabora"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/txtElabora"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nomElabora"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/lblElabora"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/fechaEla"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/btnFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtElabora" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="87dp"
        android:backgroundTint="#62B6CB"
        android:onClick="ini"
        android:text="@string/iniciar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>