<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="-354dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="285dp"
        android:layout_height="301dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/logo_pt_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnVisualizar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="93dp"
        android:backgroundTint="#62B6CB"
        android:onClick="vis"
        android:text="@string/visualizar_antiguos"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevo"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/btnNuevo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="#62B6CB"
        android:onClick="nuevo"
        android:text="@string/nuevo_formulario"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>